# wine-geo-monitor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release-please.yml
docs/: TOUR.md
docs/adr/: 0001-record-architecture-decisions.md  0002-dumb-collector-and-durable-raw-layer.md  0003-plain-python-with-a-swappable-provider-seam.md  0004-ground-the-tracked-list-in-real-model-responses.md  0005-provider-parity-tiers.md
tests/: test_ab_experiment.py  test_advise.py  test_batch.py  test_compare.py  test_cost.py  test_diagnose.py  test_discover.py  test_entity_report.py  test_env.py  test_extract.py  test_generation.py  test_grounded.py  test_pipeline.py  test_prominence.py  test_providers.py  test_stats.py  test_tokens.py  test_trend.py  test_verify.py
wine_geo/: __init__.py  ab_experiment.py  advise.py  cli.py  compare.py  config.py  definitions.py  diagnose.py  discover.py  entity_report.py  extract.py  generation.py  pipeline.py  prominence.py  providers.py  report.py  runner.py  schema.py  sla.py  stats.py  tokens.py  trend.py  verify.py  viz.py
wine_geo/data/: hidden_gems.json  model_cutoffs.json  producers.json  publications.json  rating_ab_prompts.json  regions.json
