[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wine-geo-monitor"
version = "0.3.0"
description = "A tiny Generative Engine Optimization monitor for wine brands."
requires-python = ">=3.9"
dependencies = []  # core runs on the stdlib; real providers are optional extras

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dagster = ["dagster>=1.7", "dagster-webserver>=1.7"]
viz = ["matplotlib>=3.6"]
dev = ["pytest>=8", "pytest-cov>=4", "ruff>=0.5"]

[project.scripts]
wine-geo = "wine_geo.cli:main"

[tool.setuptools]
packages = ["wine_geo"]

[tool.setuptools.package-data]
wine_geo = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.dagster]
module_name = "wine_geo.definitions"
code_location_name = "wine_geo"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["wine_geo"]
